// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer "\\b\\f\\r\\n\\t\\v\\"\\''\\\\" 1`] = `
Array [
  "\\"",
  "",
  "",
  "
",
  "
",
  "	",
  "",
  "\\"",
  "'",
  "'",
  "\\\\",
  "\\"",
]
`;

exports[`lexer "\\x50\\u0067\\u{53}\\u{051}\\u{00004C}" 1`] = `
Array [
  "\\"",
  "P",
  "g",
  "S",
  "Q",
  "L",
  "\\"",
]
`;

exports[`lexer "\\z" 1`] = `
Array [
  "\\"",
  "z",
  "\\"",
]
`;

exports[`lexer "123".type() 1`] = `
Array [
  "\\"",
  "123",
  "\\"",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer "aaa".type() 1`] = `
Array [
  "\\"",
  "aaa",
  "\\"",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer "last" 1`] = `
Array [
  "\\"",
  "last",
  "\\"",
]
`;

exports[`lexer $ + "2" 1`] = `
Array [
  "$",
  " ",
  "+",
  " ",
  "\\"",
  "2",
  "\\"",
]
`;

exports[`lexer $ /* comment */ .bar 1`] = `
Array [
  "$",
  " ",
  "/*",
  " comment ",
  "*/",
  " ",
  ".",
  "bar",
]
`;

exports[`lexer $ < 1 1`] = `
Array [
  "$",
  " ",
  "<",
  " ",
  "1",
]
`;

exports[`lexer $ <= 1 1`] = `
Array [
  "$",
  " ",
  "<=",
  " ",
  "1",
]
`;

exports[`lexer $ <> 1 1`] = `
Array [
  "$",
  " ",
  "!=",
  " ",
  "1",
]
`;

exports[`lexer $ == "2" 1`] = `
Array [
  "$",
  " ",
  "==",
  " ",
  "\\"",
  "2",
  "\\"",
]
`;

exports[`lexer $ > 1 1`] = `
Array [
  "$",
  " ",
  ">",
  " ",
  "1",
]
`;

exports[`lexer $ ? ($ > 0) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "$",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $ ? ((@ == "1") is unknown) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "1",
  "\\"",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer $ ? ((@ == 1) is unknown) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  " ",
  "==",
  " ",
  "1",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer $ ? (+@[*] > +2) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "+",
  "@",
  "[",
  "*",
  "]",
  " ",
  ">",
  " ",
  "+",
  "2",
  ")",
]
`;

exports[`lexer $ ? (+@[*] > +3) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "+",
  "@",
  "[",
  "*",
  "]",
  " ",
  ">",
  " ",
  "+",
  "3",
  ")",
]
`;

exports[`lexer $ ? (@ == @) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "@",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "i") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "i",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "iq") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "iq",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "is") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "is",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "isim") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "isim",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "q") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "q",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern" flag "smixq") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "smixq",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ like_regex "pattern") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "pattern",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ starts with "abc") 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
]
`;

exports[`lexer $ ? (@ starts with $var) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "var",
  ")",
]
`;

exports[`lexer $ ? (@.a < $value) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "value",
  ")",
]
`;

exports[`lexer $ ? (@.a < +0.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "0.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +0.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "0.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +0.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "0.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +0.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "0.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +10.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "10.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +10.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "10.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +10.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "10.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < +10.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "+",
  "10.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -0.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "0.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -0.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "0.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -0.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "0.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -0.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "0.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -10.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "10.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -10.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "10.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -10.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "10.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < -10.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "-",
  "10.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 0.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "0.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 0.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "0.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 0.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "0.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 0.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "0.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 10.1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "10.1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 10.1e+1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "10.1e+1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 10.1e-1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "10.1e-1",
  ")",
]
`;

exports[`lexer $ ? (@.a < 10.1e1) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "10.1e1",
  ")",
]
`;

exports[`lexer $ ? (@.a == @.b) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $ ? (@.a[*] >  @.b[*]) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  "[",
  "*",
  "]",
  " ",
  ">",
  "  ",
  "@",
  ".",
  "b",
  "[",
  "*",
  "]",
  ")",
]
`;

exports[`lexer $ ? (@.a[*] >= @.b[*]) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  "[",
  "*",
  "]",
  " ",
  ">=",
  " ",
  "@",
  ".",
  "b",
  "[",
  "*",
  "]",
  ")",
]
`;

exports[`lexer $ ? (-@[*] < -2) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "-",
  "@",
  "[",
  "*",
  "]",
  " ",
  "<",
  " ",
  "-",
  "2",
  ")",
]
`;

exports[`lexer $ ? (-@[*] < -3) 1`] = `
Array [
  "$",
  " ",
  "?",
  " ",
  "(",
  "-",
  "@",
  "[",
  "*",
  "]",
  " ",
  "<",
  " ",
  "-",
  "3",
  ")",
]
`;

exports[`lexer $ 1`] = `
Array [
  "$",
]
`;

exports[`lexer $+1 1`] = `
Array [
  "$",
  "+",
  "1",
]
`;

exports[`lexer $.* ? (@.a == @.b) 1`] = `
Array [
  "$",
  ".",
  "*",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.* 1`] = `
Array [
  "$",
  ".",
  "*",
]
`;

exports[`lexer $.** ? (@.a == (@.b + 1)) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "(",
  "@",
  ".",
  "b",
  " ",
  "+",
  " ",
  "1",
  ")",
  ")",
]
`;

exports[`lexer $.** ? (@.a == (1 + 1)) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "(",
  "1",
  " ",
  "+",
  " ",
  "1",
  ")",
  ")",
]
`;

exports[`lexer $.** ? (@.a == @.b + 1) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  " ",
  "+",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.** ? (@.a == @.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.** ? (@.a == - @.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "-",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.** ? (@.a == - 1) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "-",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.** ? (@.a == -@.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "-",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.** ? (@.a == -1) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "-",
  "1",
  ")",
]
`;

exports[`lexer $.** ? (@.a == 1 + 1) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "+",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.** ? (@.a == 1 - +@.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "-",
  " ",
  "+",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.** ? (@.a == 1 - @.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "-",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.** ? (@.a == 1 - - @.b) 1`] = `
Array [
  "$",
  ".",
  "**",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "-",
  " ",
  "-",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.**.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{0 to last}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "0",
  " ",
  "to",
  " ",
  "last",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{0}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "0",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{1 to 2}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "1",
  " ",
  "to",
  " ",
  "2",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{1 to last}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "1",
  " ",
  "to",
  " ",
  "last",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{1}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "1",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.**{2 to 3}.b ? ( @ > 0) 1`] = `
Array [
  "$",
  ".",
  "**",
  "{",
  "2",
  " ",
  "to",
  " ",
  "3",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $.*.a 1`] = `
Array [
  "$",
  ".",
  "*",
  ".",
  "a",
]
`;

exports[`lexer $.*.b 1`] = `
Array [
  "$",
  ".",
  "*",
  ".",
  "b",
]
`;

exports[`lexer $.*[*] 1`] = `
Array [
  "$",
  ".",
  "*",
  "[",
  "*",
  "]",
]
`;

exports[`lexer $.a + 2 1`] = `
Array [
  "$",
  ".",
  "a",
  " ",
  "+",
  " ",
  "2",
]
`;

exports[`lexer $.a ? (@ < $value) 1`] = `
Array [
  "$",
  ".",
  "a",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "value",
  ")",
]
`;

exports[`lexer $.a 1`] = `
Array [
  "$",
  ".",
  "a",
]
`;

exports[`lexer $.a.* 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "*",
]
`;

exports[`lexer $.a.**.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{0 to 5}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "0",
  " ",
  "to",
  " ",
  "5",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{2 to 2}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "2",
  " ",
  "to",
  " ",
  "2",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{2 to 5}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "2",
  " ",
  "to",
  " ",
  "5",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{2}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "2",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{5 to last}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "5",
  " ",
  "to",
  " ",
  "last",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{last to 5}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "last",
  " ",
  "to",
  " ",
  "5",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.**{last}.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "**",
  "{",
  "last",
  "}",
  ".",
  "b",
]
`;

exports[`lexer $.a.a 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "a",
]
`;

exports[`lexer $.a.b 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "b",
]
`;

exports[`lexer $.a.v 1`] = `
Array [
  "$",
  ".",
  "a",
  ".",
  "v",
]
`;

exports[`lexer $.a/+-1 1`] = `
Array [
  "$",
  ".",
  "a",
  "/",
  "+",
  "-",
  "1",
]
`;

exports[`lexer $.a[$.a.size() - 3] 1`] = `
Array [
  "$",
  ".",
  "a",
  "[",
  "$",
  ".",
  "a",
  ".",
  "size",
  "(",
  ")",
  " ",
  "-",
  " ",
  "3",
  "]",
]
`;

exports[`lexer $.a[$a + 1, ($b[*]) to -($[0] * 2)] 1`] = `
Array [
  "$",
  ".",
  "a",
  "[",
  "a",
  " ",
  "+",
  " ",
  "1",
  ",",
  " ",
  "(",
  "b",
  "[",
  "*",
  "]",
  ")",
  " ",
  "to",
  " ",
  "-",
  "(",
  "$",
  "[",
  "0",
  "]",
  " ",
  "*",
  " ",
  "2",
  ")",
  "]",
]
`;

exports[`lexer $.a[*] 1`] = `
Array [
  "$",
  ".",
  "a",
  "[",
  "*",
  "]",
]
`;

exports[`lexer $.a[*][*] 1`] = `
Array [
  "$",
  ".",
  "a",
  "[",
  "*",
  "]",
  "[",
  "*",
  "]",
]
`;

exports[`lexer $.a[1,2, 3 to 16] 1`] = `
Array [
  "$",
  ".",
  "a",
  "[",
  "1",
  ",",
  "2",
  ",",
  " ",
  "3",
  " ",
  "to",
  " ",
  "16",
  "]",
]
`;

exports[`lexer $.abs() 1`] = `
Array [
  "$",
  ".",
  "abs",
  "(",
  ")",
]
`;

exports[`lexer $.b + 2 1`] = `
Array [
  "$",
  ".",
  "b",
  " ",
  "+",
  " ",
  "2",
]
`;

exports[`lexer $.b 1`] = `
Array [
  "$",
  ".",
  "b",
]
`;

exports[`lexer $.c ? ($.c.a == @.b) 1`] = `
Array [
  "$",
  ".",
  "c",
  " ",
  "?",
  " ",
  "(",
  "$",
  ".",
  "c",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.c ? (@.a == @.b) 1`] = `
Array [
  "$",
  ".",
  "c",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "@",
  ".",
  "b",
  ")",
]
`;

exports[`lexer $.ceiling() 1`] = `
Array [
  "$",
  ".",
  "ceiling",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("HH24") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("HH24:MI TZH") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI TZH",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("HH24:MI TZH:TZM") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI TZH:TZM",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("HH24:MI") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("HH24:MI:SS TZH:TZM").type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI:SS TZH:TZM",
  "\\"",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("HH24:MI:SS").type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI:SS",
  "\\"",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("aaa") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "aaa",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("datetime template") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "datetime template",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy HH24:MI TZH") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy HH24:MI TZH",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy HH24:MI TZH:TZM") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy HH24:MI TZH:TZM",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy HH24:MI TZH:TZM").type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy HH24:MI TZH:TZM",
  "\\"",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy HH24:MI") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy HH24:MI",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy HH24:MI").type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy HH24:MI",
  "\\"",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy").type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy",
  "\\"",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.datetime("dd-mm-yyyy\\"T\\"HH24:MI:SS") 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd-mm-yyyy",
  "\\"",
  "T",
  "\\"",
  "HH24:MI:SS",
  "\\"",
  ")",
]
`;

exports[`lexer $.datetime() > "2020-01-01 12:00:00".datetime() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  ">",
  " ",
  "\\"",
  "2020-01-01 12:00:00",
  "\\"",
  ".",
  "datetime",
  "(",
  ")",
]
`;

exports[`lexer $.datetime() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  ")",
]
`;

exports[`lexer $.datetime().type() 1`] = `
Array [
  "$",
  ".",
  "datetime",
  "(",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $.double() 1`] = `
Array [
  "$",
  ".",
  "double",
  "(",
  ")",
]
`;

exports[`lexer $.double().floor().ceiling().abs() 1`] = `
Array [
  "$",
  ".",
  "double",
  "(",
  ")",
  ".",
  "floor",
  "(",
  ")",
  ".",
  "ceiling",
  "(",
  ")",
  ".",
  "abs",
  "(",
  ")",
]
`;

exports[`lexer $.floor() 1`] = `
Array [
  "$",
  ".",
  "floor",
  "(",
  ")",
]
`;

exports[`lexer $.foo\\x50\\u0067\\u{53}\\u{051}\\u{00004C}\\t\\"bar 1`] = `
Array [
  "$",
  ".",
  "foo",
  "P",
  "g",
  "S",
  "Q",
  "L",
  "	",
  "\\"",
  "bar",
]
`;

exports[`lexer $.g ? ($.a == 1) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "$",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.g ? ((@.x >= 123 || @.a == 4) && exists (@.x ? (@ == 14))) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  ".",
  "x",
  " ",
  ">=",
  " ",
  "123",
  " ",
  "||",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
  " ",
  "&&",
  " ",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "14",
  ")",
  ")",
  ")",
]
`;

exports[`lexer $.g ? ((@.x >= 123 || @.a == 4) is unknown) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  ".",
  "x",
  " ",
  ">=",
  " ",
  "123",
  " ",
  "||",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer $.g ? (+@.x >= +-(+@.a + 2)) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "+",
  "@",
  ".",
  "x",
  " ",
  ">=",
  " ",
  "+",
  "-",
  "(",
  "+",
  "@",
  ".",
  "a",
  " ",
  "+",
  " ",
  "2",
  ")",
  ")",
]
`;

exports[`lexer $.g ? (@ == 1) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1 && @.a == 4) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "&&",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1 || !(@.a == 4) && @.b == 7) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "||",
  " ",
  "!",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
  " ",
  "&&",
  " ",
  "@",
  ".",
  "b",
  " ",
  "==",
  " ",
  "7",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1 || !(@.x >= 123 || @.a == 4) && @.b == 7) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "||",
  " ",
  "!",
  "(",
  "@",
  ".",
  "x",
  " ",
  ">=",
  " ",
  "123",
  " ",
  "||",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
  " ",
  "&&",
  " ",
  "@",
  ".",
  "b",
  " ",
  "==",
  " ",
  "7",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1 || @.a == 4 && @.b == 7) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "||",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  " ",
  "&&",
  " ",
  "@",
  ".",
  "b",
  " ",
  "==",
  " ",
  "7",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1 || @.a == 4) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  " ",
  "||",
  " ",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "4",
  ")",
]
`;

exports[`lexer $.g ? (@.a == 1) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  "==",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $.g ? (@.x >= @[*]?(@.a > "abc")) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  ">=",
  " ",
  "@",
  "[",
  "*",
  "]",
  "?",
  "(",
  "@",
  ".",
  "a",
  " ",
  ">",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $.g ? (@.zip == $zip) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "zip",
  " ",
  "==",
  " ",
  "zip",
  ")",
]
`;

exports[`lexer $.g ? (exists (@.x ? (@ == 14))) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "14",
  ")",
  ")",
  ")",
]
`;

exports[`lexer $.g ? (exists (@.x ? (@ >= 2) )) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "2",
  ")",
  " ",
  ")",
  ")",
]
`;

exports[`lexer $.g ? (exists (@.x)) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  ")",
  ")",
]
`;

exports[`lexer $.g ? (exists (@.y)) 1`] = `
Array [
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "y",
  ")",
  ")",
]
`;

exports[`lexer $.keyvalue() 1`] = `
Array [
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
]
`;

exports[`lexer $.keyvalue().key 1`] = `
Array [
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
  ".",
  "key",
]
`;

exports[`lexer $.last 1`] = `
Array [
  "$",
  ".",
  "last",
]
`;

exports[`lexer $.type() 1`] = `
Array [
  "$",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $[$[0] ? (last > 0)] 1`] = `
Array [
  "$",
  "[",
  "$",
  "[",
  "0",
  "]",
  " ",
  "?",
  " ",
  "(",
  "last",
  " ",
  ">",
  " ",
  "0",
  ")",
  "]",
]
`;

exports[`lexer $[*] ? ((2 / @ > 0) is unknown) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "(",
  "2",
  " ",
  "/",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer $[*] ? (@ != null) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "!=",
  " ",
  "null",
  ")",
]
`;

exports[`lexer $[*] ? (@ < $value) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "value",
  ")",
]
`;

exports[`lexer $[*] ? (@ == "1") 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "1",
  "\\"",
  ")",
]
`;

exports[`lexer $[*] ? (@ == $value) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "value",
  ")",
]
`;

exports[`lexer $[*] ? (@ == null) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "null",
  ")",
]
`;

exports[`lexer $[*] ? (@ starts with "abc") 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
]
`;

exports[`lexer $[*] ? (@.a > $min && @.a < $max) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  ">",
  " ",
  "min",
  " ",
  "&&",
  " ",
  "@",
  ".",
  "a",
  " ",
  "<",
  " ",
  "max",
  ")",
]
`;

exports[`lexer $[*] ? (@.a > 2) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  ">",
  " ",
  "2",
  ")",
]
`;

exports[`lexer $[*] ? (@.a > 10) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  ">",
  " ",
  "10",
  ")",
]
`;

exports[`lexer $[*] ? (2 / @ > 0) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "2",
  " ",
  "/",
  " ",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer $[*] 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
]
`;

exports[`lexer $[*].a > 1 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  ">",
  " ",
  "1",
]
`;

exports[`lexer $[*].a > 2 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  ">",
  " ",
  "2",
]
`;

exports[`lexer $[*].a ? (@ == 1) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $[*].a ? (@ > $min && @ < $max) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "min",
  " ",
  "&&",
  " ",
  "@",
  " ",
  "<",
  " ",
  "max",
  ")",
]
`;

exports[`lexer $[*].a ? (@ > 1) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $[*].a ? (@ > 10) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "10",
  ")",
]
`;

exports[`lexer $[*].a 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
]
`;

exports[`lexer $[*].abs() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "abs",
  "(",
  ")",
]
`;

exports[`lexer $[*].ceiling() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "ceiling",
  "(",
  ")",
]
`;

exports[`lexer $[*].ceiling().abs() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "ceiling",
  "(",
  ")",
  ".",
  "abs",
  "(",
  ")",
]
`;

exports[`lexer $[*].ceiling().abs().type() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "ceiling",
  "(",
  ")",
  ".",
  "abs",
  "(",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ <  "10.03.2017".datetime("dd.mm.yyyy")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  "  ",
  "\\"",
  "10.03.2017",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ <  "12:35 +1".datetime("HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  "  ",
  "\\"",
  "12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ <  "12:35".datetime("HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  "  ",
  "\\"",
  "12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ < "10.03.2017 12:35 +1".datetime("dd.mm.yyyy HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "\\"",
  "10.03.2017 12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ < "10.03.2017 12:35".datetime("dd.mm.yyyy HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "\\"",
  "10.03.2017 12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ == "10.03.2017 12:35 +1".datetime("dd.mm.yyyy HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "10.03.2017 12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ == "10.03.2017 12:35".datetime("dd.mm.yyyy HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "10.03.2017 12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ == "10.03.2017".datetime("dd.mm.yyyy")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "10.03.2017",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ == "12:35 +1".datetime("HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ == "12:35".datetime("HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "\\"",
  "12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ >= "10.03.2017 12:35 +1".datetime("dd.mm.yyyy HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "\\"",
  "10.03.2017 12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ >= "10.03.2017 12:35".datetime("dd.mm.yyyy HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "\\"",
  "10.03.2017 12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ >= "10.03.2017".datetime("dd.mm.yyyy")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "\\"",
  "10.03.2017",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "dd.mm.yyyy",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ >= "12:35 +1".datetime("HH24:MI TZH")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "\\"",
  "12:35 +1",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI TZH",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].datetime() ? (@ >= "12:35".datetime("HH24:MI")) 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "datetime",
  "(",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">=",
  " ",
  "\\"",
  "12:35",
  "\\"",
  ".",
  "datetime",
  "(",
  "\\"",
  "HH24:MI",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer $[*].floor() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "floor",
  "(",
  ")",
]
`;

exports[`lexer $[*].keyvalue() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "keyvalue",
  "(",
  ")",
]
`;

exports[`lexer $[*].type() 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer $[*][0] 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  "[",
  "0",
  "]",
]
`;

exports[`lexer $[*][0].a.b 1`] = `
Array [
  "$",
  "[",
  "*",
  "]",
  "[",
  "0",
  "]",
  ".",
  "a",
  ".",
  "b",
]
`;

exports[`lexer $[0 to 1] ? (@.a > 1) 1`] = `
Array [
  "$",
  "[",
  "0",
  " ",
  "to",
  " ",
  "1",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  " ",
  ">",
  " ",
  "1",
  ")",
]
`;

exports[`lexer $[0 to 2] ? (@ < $value) 1`] = `
Array [
  "$",
  "[",
  "0",
  " ",
  "to",
  " ",
  "2",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "value",
  ")",
]
`;

exports[`lexer $[0,1] ? (@ < $x.value) 1`] = `
Array [
  "$",
  "[",
  "0",
  ",",
  "1",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "<",
  " ",
  "x",
  ".",
  "value",
  ")",
]
`;

exports[`lexer $[0.3] 1`] = `
Array [
  "$",
  "[",
  "0.3",
  "]",
]
`;

exports[`lexer $[0.5] 1`] = `
Array [
  "$",
  "[",
  "0.5",
  "]",
]
`;

exports[`lexer $[0.9] 1`] = `
Array [
  "$",
  "[",
  "0.9",
  "]",
]
`;

exports[`lexer $[0] 1`] = `
Array [
  "$",
  "[",
  "0",
  "]",
]
`;

exports[`lexer $[1.2] 1`] = `
Array [
  "$",
  "[",
  "1.2",
  "]",
]
`;

exports[`lexer $[1] 1`] = `
Array [
  "$",
  "[",
  "1",
  "]",
]
`;

exports[`lexer $[2.5 - 1 to $.size() - 2] 1`] = `
Array [
  "$",
  "[",
  "2.5",
  " ",
  "-",
  " ",
  "1",
  " ",
  "to",
  " ",
  "$",
  ".",
  "size",
  "(",
  ")",
  " ",
  "-",
  " ",
  "2",
  "]",
]
`;

exports[`lexer $[last ? (@.type() == "number")] 1`] = `
Array [
  "$",
  "[",
  "last",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "type",
  "(",
  ")",
  " ",
  "==",
  " ",
  "\\"",
  "number",
  "\\"",
  ")",
  "]",
]
`;

exports[`lexer $[last ? (@.type() == "string")] 1`] = `
Array [
  "$",
  "[",
  "last",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "type",
  "(",
  ")",
  " ",
  "==",
  " ",
  "\\"",
  "string",
  "\\"",
  ")",
  "]",
]
`;

exports[`lexer $[last ? (exists(last))] 1`] = `
Array [
  "$",
  "[",
  "last",
  " ",
  "?",
  " ",
  "(",
  "exists",
  "(",
  "last",
  ")",
  ")",
  "]",
]
`;

exports[`lexer $[last - 1] 1`] = `
Array [
  "$",
  "[",
  "last",
  " ",
  "-",
  " ",
  "1",
  "]",
]
`;

exports[`lexer $[last] 1`] = `
Array [
  "$",
  "[",
  "last",
  "]",
]
`;

exports[`lexer $--+1 1`] = `
Array [
  "$",
  "-",
  "-",
  "+",
  "1",
]
`;

exports[`lexer $-1 1`] = `
Array [
  "$",
  "-",
  "1",
]
`;

exports[`lexer $a 1`] = `
Array [
  "a",
]
`;

exports[`lexer $a.b 1`] = `
Array [
  "a",
  ".",
  "b",
]
`;

exports[`lexer $a[*] 1`] = `
Array [
  "a",
  "[",
  "*",
  "]",
]
`;

exports[`lexer ($ < 1) || $.a.b <= $x 1`] = `
Array [
  "(",
  "$",
  " ",
  "<",
  " ",
  "1",
  ")",
  " ",
  "||",
  " ",
  "$",
  ".",
  "a",
  ".",
  "b",
  " ",
  "<=",
  " ",
  "x",
]
`;

exports[`lexer ($) 1`] = `
Array [
  "(",
  "$",
  ")",
]
`;

exports[`lexer ($).a.b 1`] = `
Array [
  "(",
  "$",
  ")",
  ".",
  "a",
  ".",
  "b",
]
`;

exports[`lexer ($.a - 5).abs() + 10 1`] = `
Array [
  "(",
  "$",
  ".",
  "a",
  " ",
  "-",
  " ",
  "5",
  ")",
  ".",
  "abs",
  "(",
  ")",
  " ",
  "+",
  " ",
  "10",
]
`;

exports[`lexer ($.a.b + -$.x.y).c.d 1`] = `
Array [
  "(",
  "$",
  ".",
  "a",
  ".",
  "b",
  " ",
  "+",
  " ",
  "-",
  "$",
  ".",
  "x",
  ".",
  "y",
  ")",
  ".",
  "c",
  ".",
  "d",
]
`;

exports[`lexer ($.a.b).c.d 1`] = `
Array [
  "(",
  "$",
  ".",
  "a",
  ".",
  "b",
  ")",
  ".",
  "c",
  ".",
  "d",
]
`;

exports[`lexer ($[*] > 2) ? (@ == true) 1`] = `
Array [
  "(",
  "$",
  "[",
  "*",
  "]",
  " ",
  ">",
  " ",
  "2",
  ")",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "true",
  ")",
]
`;

exports[`lexer ($[*] > 3).type() 1`] = `
Array [
  "(",
  "$",
  "[",
  "*",
  "]",
  " ",
  ">",
  " ",
  "3",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer ($[*].a > 3).type() 1`] = `
Array [
  "(",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  ">",
  " ",
  "3",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer (($)) 1`] = `
Array [
  "(",
  "(",
  "$",
  ")",
  ")",
]
`;

exports[`lexer ((($ + 1)).a + ((2)).b ? ((((@ > 1)) || (exists(@.c))))) 1`] = `
Array [
  "(",
  "(",
  "(",
  "$",
  " ",
  "+",
  " ",
  "1",
  ")",
  ")",
  ".",
  "a",
  " ",
  "+",
  " ",
  "(",
  "(",
  "2",
  ")",
  ")",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "(",
  "(",
  "(",
  "@",
  " ",
  ">",
  " ",
  "1",
  ")",
  ")",
  " ",
  "||",
  " ",
  "(",
  "exists",
  "(",
  "@",
  ".",
  "c",
  ")",
  ")",
  ")",
  ")",
  ")",
]
`;

exports[`lexer (-+$.a.b).c.d 1`] = `
Array [
  "(",
  "-",
  "+",
  "$",
  ".",
  "a",
  ".",
  "b",
  ")",
  ".",
  "c",
  ".",
  "d",
]
`;

exports[`lexer (1).type() 1`] = `
Array [
  "(",
  "1",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer (1.2).e 1`] = `
Array [
  "(",
  "1.2",
  ")",
  ".",
  "e",
]
`;

exports[`lexer (1.2).e3 1`] = `
Array [
  "(",
  "1.2",
  ")",
  ".",
  "e3",
]
`;

exports[`lexer (123).type() 1`] = `
Array [
  "(",
  "123",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer +$ 1`] = `
Array [
  "+",
  "$",
]
`;

exports[`lexer /*comment*/ $.bar 1`] = `
Array [
  "/*",
  "comment",
  "*/",
  " ",
  "$",
  ".",
  "bar",
]
`;

exports[`lexer -$ 1`] = `
Array [
  "-",
  "$",
]
`;

exports[`lexer -$[*] 1`] = `
Array [
  "-",
  "$",
  "[",
  "*",
  "]",
]
`;

exports[`lexer -($.a * $.a).floor() % 4.3 1`] = `
Array [
  "-",
  "(",
  "$",
  ".",
  "a",
  " ",
  "*",
  " ",
  "$",
  ".",
  "a",
  ")",
  ".",
  "floor",
  "(",
  ")",
  " ",
  "%",
  " ",
  "4.3",
]
`;

exports[`lexer -(3 + 1 % $) 1`] = `
Array [
  "-",
  "(",
  "3",
  " ",
  "+",
  " ",
  "1",
  " ",
  "%",
  " ",
  "$",
  ")",
]
`;

exports[`lexer 0 1`] = `
Array [
  "0",
]
`;

exports[`lexer 0.0 1`] = `
Array [
  "0.0",
]
`;

exports[`lexer 0.000 1`] = `
Array [
  "0.000",
]
`;

exports[`lexer 0.000e1 1`] = `
Array [
  "0.000e1",
]
`;

exports[`lexer 0.000e2 1`] = `
Array [
  "0.000e2",
]
`;

exports[`lexer 0.000e3 1`] = `
Array [
  "0.000e3",
]
`;

exports[`lexer 0.0010 1`] = `
Array [
  "0.0010",
]
`;

exports[`lexer 0.0010e+1 1`] = `
Array [
  "0.0010e+1",
]
`;

exports[`lexer 0.0010e+2 1`] = `
Array [
  "0.0010e+2",
]
`;

exports[`lexer 0.0010e-1 1`] = `
Array [
  "0.0010e-1",
]
`;

exports[`lexer 1 * 2 + 4 % -3 != false 1`] = `
Array [
  "1",
  " ",
  "*",
  " ",
  "2",
  " ",
  "+",
  " ",
  "4",
  " ",
  "%",
  " ",
  "-",
  "3",
  " ",
  "!=",
  " ",
  "false",
]
`;

exports[`lexer 1 + ($.a.b + 2).c.d 1`] = `
Array [
  "1",
  " ",
  "+",
  " ",
  "(",
  "$",
  ".",
  "a",
  ".",
  "b",
  " ",
  "+",
  " ",
  "2",
  ")",
  ".",
  "c",
  ".",
  "d",
]
`;

exports[`lexer 1 + ($.a.b > 2).c.d 1`] = `
Array [
  "1",
  " ",
  "+",
  " ",
  "(",
  "$",
  ".",
  "a",
  ".",
  "b",
  " ",
  ">",
  " ",
  "2",
  ")",
  ".",
  "c",
  ".",
  "d",
]
`;

exports[`lexer 1 / $ + 2 1`] = `
Array [
  "1",
  " ",
  "/",
  " ",
  "$",
  " ",
  "+",
  " ",
  "2",
]
`;

exports[`lexer 1 / $ 1`] = `
Array [
  "1",
  " ",
  "/",
  " ",
  "$",
]
`;

exports[`lexer 1 1`] = `
Array [
  "1",
]
`;

exports[`lexer 1.2.e 1`] = `
Array [
  "1.2",
  ".",
  "e",
]
`;

exports[`lexer 1.2.e3 1`] = `
Array [
  "1.2",
  ".",
  "e3",
]
`;

exports[`lexer 1.2.type() 1`] = `
Array [
  "1.2",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer 1.2e3 1`] = `
Array [
  "1.2e3",
]
`;

exports[`lexer 1.e 1`] = `
Array [
  "1",
  ".",
  "e",
]
`;

exports[`lexer 1.e3 1`] = `
Array [
  "1",
  ".",
  "e3",
]
`;

exports[`lexer 1.e3.e 1`] = `
Array [
  "1",
  ".",
  "e3",
  ".",
  "e",
]
`;

exports[`lexer 1.e3.e4 1`] = `
Array [
  "1",
  ".",
  "e3",
  ".",
  "e4",
]
`;

exports[`lexer 1.type() 1`] = `
Array [
  "1",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer 1e3 1`] = `
Array [
  "1e3",
]
`;

exports[`lexer 3 * $ 1`] = `
Array [
  "3",
  " ",
  "*",
  " ",
  "$",
]
`;

exports[`lexer lax $ ? ((@[*] starts with "abc") is unknown) 1`] = `
Array [
  "lax",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  "[",
  "*",
  "]",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer lax $ ? (@[*] starts with "abc") 1`] = `
Array [
  "lax",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  "[",
  "*",
  "]",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
]
`;

exports[`lexer lax $ 1`] = `
Array [
  "lax",
  " ",
  "$",
]
`;

exports[`lexer lax $.** 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
]
`;

exports[`lexer lax $.**.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{0 to last} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "0",
  " ",
  "to",
  " ",
  "last",
  "}",
]
`;

exports[`lexer lax $.**{0 to last}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "0",
  " ",
  "to",
  " ",
  "last",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{0} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "0",
  "}",
]
`;

exports[`lexer lax $.**{0}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "0",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{1 to 2}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "1",
  " ",
  "to",
  " ",
  "2",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{1 to last} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "1",
  " ",
  "to",
  " ",
  "last",
  "}",
]
`;

exports[`lexer lax $.**{1 to last}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "1",
  " ",
  "to",
  " ",
  "last",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{1} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "1",
  "}",
]
`;

exports[`lexer lax $.**{1}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "1",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{2 to 3}.b ? (@ > 0) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "2",
  " ",
  "to",
  " ",
  "3",
  "}",
  ".",
  "b",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  ">",
  " ",
  "0",
  ")",
]
`;

exports[`lexer lax $.**{2 to last} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "2",
  " ",
  "to",
  " ",
  "last",
  "}",
]
`;

exports[`lexer lax $.**{2} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "2",
  "}",
]
`;

exports[`lexer lax $.**{3 to last} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "3",
  " ",
  "to",
  " ",
  "last",
  "}",
]
`;

exports[`lexer lax $.**{3} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "3",
  "}",
]
`;

exports[`lexer lax $.**{last} 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "**",
  "{",
  "last",
  "}",
]
`;

exports[`lexer lax $.*.a 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "*",
  ".",
  "a",
]
`;

exports[`lexer lax $.a * 3 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "a",
  " ",
  "*",
  " ",
  "3",
]
`;

exports[`lexer lax $.a + 3 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "a",
  " ",
  "+",
  " ",
  "3",
]
`;

exports[`lexer lax $.a 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "a",
]
`;

exports[`lexer lax $.g ? ((exists (@.x + "3")) is unknown) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  "+",
  " ",
  "\\"",
  "3",
  "\\"",
  ")",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer lax $.g ? (exists (@.x + "3")) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  " ",
  "+",
  " ",
  "\\"",
  "3",
  "\\"",
  ")",
  ")",
]
`;

exports[`lexer lax $.g ? (exists (@.x)) 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  ")",
  ")",
]
`;

exports[`lexer lax $.keyvalue() 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
]
`;

exports[`lexer lax $.keyvalue().key 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
  ".",
  "key",
]
`;

exports[`lexer lax $.type() 1`] = `
Array [
  "lax",
  " ",
  "$",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer lax $[*] ? ((@ starts with "abc") is unknown) 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^a\\\\B$" flag "iq") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^a",
  "\\\\",
  "B$",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "iq",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^a\\\\B$" flag "q") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^a",
  "\\\\",
  "B$",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "q",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^a\\\\b$" flag "") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^a",
  "\\\\",
  "b$",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^a\\\\b$" flag "q") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^a",
  "\\\\",
  "b$",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "q",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^ab.*c" flag "i") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^ab.*c",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "i",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^ab.*c" flag "m") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^ab.*c",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "m",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^ab.*c" flag "s") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^ab.*c",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "s",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "^ab.*c") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "^ab.*c",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "a\\\\b" flag "") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "a",
  "\\\\",
  "b",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] ? (@ like_regex "a\\\\b" flag "q") 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "like_regex",
  " ",
  "\\"",
  "a",
  "\\\\",
  "b",
  "\\"",
  " ",
  "flag",
  " ",
  "\\"",
  "q",
  "\\"",
  ")",
]
`;

exports[`lexer lax $[*] 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
]
`;

exports[`lexer lax $[*].* 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  ".",
  "*",
]
`;

exports[`lexer lax $[*].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[*].size() 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "*",
  "]",
  ".",
  "size",
  "(",
  ")",
]
`;

exports[`lexer lax $[0 to 10 / 0].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "0",
  " ",
  "to",
  " ",
  "10",
  " ",
  "/",
  " ",
  "0",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[0 to 10].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "0",
  " ",
  "to",
  " ",
  "10",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[0,1].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "0",
  ",",
  "1",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[0] 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "0",
  "]",
]
`;

exports[`lexer lax $[0].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "0",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[1].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "1",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[2].a 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "2",
  "]",
  ".",
  "a",
]
`;

exports[`lexer lax $[10000000000000000] 1`] = `
Array [
  "lax",
  " ",
  "$",
  "[",
  "10000000000000000",
  "]",
]
`;

exports[`lexer lax -$.a 1`] = `
Array [
  "lax",
  " ",
  "-",
  "$",
  ".",
  "a",
]
`;

exports[`lexer lax exists($[*].a) 1`] = `
Array [
  "lax",
  " ",
  "exists",
  "(",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  ")",
]
`;

exports[`lexer null.type() 1`] = `
Array [
  "null",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer strict $ ? ((@[*] starts with "abc") is unknown) 1`] = `
Array [
  "strict",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "(",
  "@",
  "[",
  "*",
  "]",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer strict $ ? (@ == @) 1`] = `
Array [
  "strict",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  " ",
  "==",
  " ",
  "@",
  ")",
]
`;

exports[`lexer strict $ ? (@.a[*] >= @.b[*]) 1`] = `
Array [
  "strict",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  ".",
  "a",
  "[",
  "*",
  "]",
  " ",
  ">=",
  " ",
  "@",
  ".",
  "b",
  "[",
  "*",
  "]",
  ")",
]
`;

exports[`lexer strict $ ? (@[*] starts with "abc") 1`] = `
Array [
  "strict",
  " ",
  "$",
  " ",
  "?",
  " ",
  "(",
  "@",
  "[",
  "*",
  "]",
  " ",
  "starts",
  " ",
  "with",
  " ",
  "\\"",
  "abc",
  "\\"",
  ")",
]
`;

exports[`lexer strict $ 1`] = `
Array [
  "strict",
  " ",
  "$",
]
`;

exports[`lexer strict $.* 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "*",
]
`;

exports[`lexer strict $.*.b 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "*",
  ".",
  "b",
]
`;

exports[`lexer strict $.a 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "a",
]
`;

exports[`lexer strict $.datetime() 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "datetime",
  "(",
  ")",
]
`;

exports[`lexer strict $.double() 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "double",
  "(",
  ")",
]
`;

exports[`lexer strict $.g ? ((exists (@[*].x)) is unknown) 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "(",
  "exists",
  " ",
  "(",
  "@",
  "[",
  "*",
  "]",
  ".",
  "x",
  ")",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer strict $.g ? (exists (@[*].x)) 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "g",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  "[",
  "*",
  "]",
  ".",
  "x",
  ")",
  ")",
]
`;

exports[`lexer strict $.g[*] ? ((exists (@.x)) is unknown) 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "g",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  ")",
  ")",
  " ",
  "is",
  " ",
  "unknown",
  ")",
]
`;

exports[`lexer strict $.g[*] ? (exists (@.x)) 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "g",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "exists",
  " ",
  "(",
  "@",
  ".",
  "x",
  ")",
  ")",
]
`;

exports[`lexer strict $.keyvalue() 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
]
`;

exports[`lexer strict $.keyvalue().a 1`] = `
Array [
  "strict",
  " ",
  "$",
  ".",
  "keyvalue",
  "(",
  ")",
  ".",
  "a",
]
`;

exports[`lexer strict $["a"] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "\\"",
  "a",
  "\\"",
  "]",
]
`;

exports[`lexer strict $[*] ? (@[0] < $x) [1] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  "[",
  "0",
  "]",
  " ",
  "<",
  " ",
  "x",
  ")",
  " ",
  "[",
  "1",
  "]",
]
`;

exports[`lexer strict $[*] ? (@[0] > $x) [1] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "*",
  "]",
  " ",
  "?",
  " ",
  "(",
  "@",
  "[",
  "0",
  "]",
  " ",
  ">",
  " ",
  "x",
  ")",
  " ",
  "[",
  "1",
  "]",
]
`;

exports[`lexer strict $[*] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "*",
  "]",
]
`;

exports[`lexer strict $[*].a 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
]
`;

exports[`lexer strict $[*].size() 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "*",
  "]",
  ".",
  "size",
  "(",
  ")",
]
`;

exports[`lexer strict $[1.2] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "1.2",
  "]",
]
`;

exports[`lexer strict $[1] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "1",
  "]",
]
`;

exports[`lexer strict $[10000000000000000] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "10000000000000000",
  "]",
]
`;

exports[`lexer strict $[last] 1`] = `
Array [
  "strict",
  " ",
  "$",
  "[",
  "last",
  "]",
]
`;

exports[`lexer strict ($[*].a > 3).type() 1`] = `
Array [
  "strict",
  " ",
  "(",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  " ",
  ">",
  " ",
  "3",
  ")",
  ".",
  "type",
  "(",
  ")",
]
`;

exports[`lexer strict -$[*] 1`] = `
Array [
  "strict",
  " ",
  "-",
  "$",
  "[",
  "*",
  "]",
]
`;

exports[`lexer strict exists($[*].a) 1`] = `
Array [
  "strict",
  " ",
  "exists",
  "(",
  "$",
  "[",
  "*",
  "]",
  ".",
  "a",
  ")",
]
`;

exports[`lexer true.type() 1`] = `
Array [
  "true",
  ".",
  "type",
  "(",
  ")",
]
`;
